<resources>
    <string name="app_name">CalculatorApp</string>
    <string name="title">Calculator</string>

    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="multiply">x</string>
    <string name="divide">/</string>
    <string name="modulo">MOD</string>
    <string name="power">n1^n2</string>
    <string name="percent">%</string>
    <string name="clear">Clear</string>

    <string name="firstHint">   Enter first number</string>
    <string name="secondHint">  Enter second number</string>
    <string name="defaultOutput">0.0</string>
</resources>