<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BBEBED"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="400dp"
        android:layout_height="60dp"
        android:layout_marginTop="324dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/multiplyButton"
            android:layout_width="80dp"
            android:layout_height="48dp"
            android:text="@string/multiply"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/divideButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/subtractButton" />

        <Button
            android:id="@+id/subtractButton"
            android:layout_width="80dp"
            android:layout_height="48dp"
            android:text="@string/subtract"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/multiplyButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/addButton" />

        <Button
            android:id="@+id/addButton"
            android:layout_width="80dp"
            android:layout_height="48dp"
            android:text="@string/add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/subtractButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/divideButton"
            android:layout_width="80dp"
            android:layout_height="48dp"
            android:text="@string/divide"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/multiplyButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/title"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/outputText"
        android:layout_width="370dp"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_edit_text"
        android:text="@string/defaultOutput"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.006"
        app:layout_constraintStart_toStartOf="@+id/secondNum"
        app:layout_constraintTop_toBottomOf="@+id/secondNum" />

    <EditText
        android:id="@+id/secondNum"
        android:layout_width="370dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="@string/secondHint"
        android:inputType="number|numberDecimal|numberSigned"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNum" />

    <EditText
        android:id="@+id/firstNum"
        android:layout_width="370dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="@string/firstHint"
        android:inputType="number|numberDecimal|numberSigned"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="400dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <Button
            android:id="@+id/powerButton"
            android:layout_width="87dp"
            android:layout_height="48dp"
            android:text="@string/power"
            app:layout_constraintEnd_toStartOf="@+id/moduloButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/moduloButton"
            android:layout_width="80dp"
            android:layout_height="48dp"
            android:text="@string/modulo"
            app:layout_constraintEnd_toStartOf="@+id/percentButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/powerButton"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/percentButton"
            android:layout_width="75dp"
            android:layout_height="48dp"
            android:text="@string/percent"
            app:layout_constraintEnd_toStartOf="@+id/clearButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/moduloButton"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/clearButton"
            android:layout_width="85dp"
            android:layout_height="48dp"
            android:text="@string/clear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/percentButton"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>